Dark Mode Fix
-Card for student detail changed

--- a/teacher-toolbox/src/app/students/students-details/students-details.component.css
+++ b/teacher-toolbox/src/app/students/students-details/students-details.component.css
@@ -103,3 +103,15 @@
 .modal {
     overflow-y: auto;
 }
+
+.card-header{
+    color:black;
+}
+
+.card-body{
+    color:black;
+}
+
+.card-text{
+    color:black;
+}
